<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
	<string name="username">username</string>
	<string name="password">password</string>
	
	
	<string name="user">"请输入用户名/qq号"</string>
	<string name="pass">"请输入密码"</string>
	<string name="register">"注册"</string>
	<string name="confirm">confirm</string>
	<string name="cancel">cancel</string>
	
	
	
</resources>
