<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:hint="@string/user"
    />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/pass"
    android:layout_marginTop="20dp"
    android:inputType="textPassword"
    />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>
