<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/first_longtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        />
    <TextView 
        android:id="@+id/second_longtext"
        android:layout_below="@id/first_longtext"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        />

    <Button
        android:id="@+id/first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:width="90dp"
        android:layout_marginLeft="10dp"
        android:text="@string/confirm" />

    <Button 
        android:id="@+id/second_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:width="90dp"
        android:text="@string/cancel"
        />

    <Button
        android:id="@+id/third_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:width="90dp"
        android:layout_marginRight="10dp"
        android:text="@string/register" />
    
</RelativeLayout>
