<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">
   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" 
        android:textSize="20sp"
        android:layout_marginLeft="20dp" 
        android:layout_marginTop="50dp"
        
        
        />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp" 
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        />
   <Button 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/confirm"
       android:layout_marginTop="50dp"
       android:layout_marginLeft="50dp"
       />

   
</LinearLayout>
