<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/login">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/user"
        android:maxLength="20"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:typeface="sans"
        />
     <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/pass"
        android:maxLength="15"
        android:password="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />
     <Button
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="60dp"
        android:text="@string/confirm"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
     />
      <Button
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
     />

      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="bottom|center_horizontal"
          android:autoLink="web"
          android:text="www.baidu.com"
          />
</LinearLayout>
