<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">"
    
    <TextView 
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/hello_world"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@android:color/holo_green_light"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/user"
        android:textSize="20sp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="@string/pass"
        android:textSize="20sp" />

</FrameLayout>
